--- a/PyBer.ipynb
+++ b/PyBer.ipynb
@@ -2682,7 +2682,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Calculate the percentage of drivers for each city type.\n",
+    "driver_percents = 100 *\n",
+    "city_data_df.groupby([\"type\"]).sum()[\"driver_count\"] / city_data_df[\"driver_count\"].sum()\n",
+    "driver_percents"
+   ]
   }
  ],
  "metadata": {
